Added Bootstrap, added show page for car

--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,80 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-   
-    <title>🚘Ejaz Auto Dealership</title>
+<html lang="en">
 
-    <link rel="stylesheet" href="index.css">
-    <script defer type="text/javascript" src="./index.js"></script>
-    <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Huntington Auto Dealer</title>
+
+
+  <!-- Custom styles for this template -->
+  <link href="index.css" rel="stylesheet">
+  <script defer src="index.js"></script>
 
 </head>
-  <body>
-      <div class="container-fluid" style="padding-right: 5%">
-        <div class="navbar-text navbar-right">Welcome
-        </div>
-        
-        <div class="center-container text-center">
-            <h1 class="animated fadeIn">🚘Welcome to Huntington Auto Dealer</h1>
-            <p>Find a car at a price you can afford.</p>
-            <br><br>
 
-            <div class="row" id="main_container">
-            </div>
+<body>
 
-        </div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">PreOwned Dealership</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <!-- <li class="nav-item active">
+            <a class="nav-link" href="#">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li> -->
+          <li class="nav-item">
+            <p class="nav-link inventory-link">Inventory</p> 
+          </li>
+          <li class="nav-item">
+            <p class="nav-link appointment-link">Appointments</p>
+          </li>
+          <li class="nav-item">
+            <p class="nav-link clients-link">Clients</p>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
 
-  </body>
+  <!-- Page Content -->
+  <div class="container">
+
+    <!-- Jumbotron Header -->
+    <header class="jumbotron my-4 text-center">
+      <h1 class="display-3">Huntington Auto Dealer</h1>
+      <p class="lead">Find a car for an affordable price!</p>
+      <a href="#" class="btn btn-primary btn-lg">Schedule an Appointment!</a>
+    </header>
+
+    <!-- Page Features -->
+    <div class="row text-center" id="car-posts">
+    </div>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+
+  <!-- Footer -->
+  <br><br><br>
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+
+</body>
+
 </html>
