Added clients index and log in button, header name changes to client

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">PreOwned Dealership</a>
+      <h4 id="username"></h4>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -54,7 +54,7 @@
     <header class="jumbotron my-4 text-center">
       <h1 class="display-3">Huntington Auto Dealer</h1>
       <p class="lead">Find a car for an affordable price!</p>
-      <a href="#" class="btn btn-primary btn-lg">Schedule an Appointment!</a>
+      <button class="btn btn-primary btn-lg create-apt">Schedule an Appointment!</button>
     </header>
 
     <!-- Page Features -->
