--- a/src/index.html
+++ b/src/index.html
@@ -28,19 +28,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <!-- <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li> -->
           <li class="nav-item">
-            <p class="nav-link inventory-link">Inventory</p> 
+            <p class="nav-link" id="inventory-link">Inventory</p> 
           </li>
           <li class="nav-item">
-            <p class="nav-link appointment-link">Appointments</p>
-          </li>
-          <li class="nav-item">
-            <p class="nav-link clients-link">Clients</p>
+            <p class="nav-link" id="apt-link">Appointments</p>
           </li>
         </ul>
       </div>
@@ -54,7 +46,6 @@
     <header class="jumbotron my-4 text-center">
       <h1 class="display-3">Huntington Auto Dealer</h1>
       <p class="lead">Find a car for an affordable price!</p>
-      <button class="btn btn-primary btn-lg create-apt">Schedule an Appointment!</button>
     </header>
 
     <!-- Page Features -->
