--- a/src/index.html
+++ b/src/index.html
@@ -21,17 +21,17 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
+    <div class="container navigation">
       <h4 id="username"></h4>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto" id="nav-ul">
           <li class="nav-item">
             <p class="nav-link" id="inventory-link">Inventory</p> 
           </li>
-          <li class="nav-item">
+          <li class="nav-item" id="apt-link-li">
             <p class="nav-link" id="apt-link">Appointments</p>
           </li>
         </ul>
@@ -46,6 +46,7 @@
     <header class="jumbotron my-4 text-center">
       <h1 class="display-3">Huntington Auto Dealer</h1>
       <p class="lead">Find a car for an affordable price!</p>
+      <button class="btn btn-primary create-account">Create Account</button>
     </header>
 
     <!-- Page Features -->
