--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
   <div class="container">
 
     <!-- Jumbotron Header -->
-    <header class="jumbotron my-4 text-center">
+    <header class="jumbotron my-4 text-center" style="background-color:white">
       <h1 class="display-3">Huntington Auto Dealer</h1>
       <p class="lead">Find a car for an affordable price!</p>
       <button class="btn btn-primary create-account">Create Account</button>
