--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,12 @@
     </header>
 
     <!-- Page Features -->
-    
-    <div class="row text-center" id="car-posts">
+    <div class="container">
+      <div class="row text-center" id="car-posts">
+      </div>
+      <!-- <div class="" id="all-client-apts"> -->
+
+      </div>
     </div>
     <!-- /.row -->
 
