--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Huntington Auto Dealer</title>
+  <title class="animated pulse">🚘Huntington Auto Dealer</title>
 
 
   <!-- Custom styles for this template -->
