--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title class="animated pulse">🚘Huntington Auto Dealer</title>
+
+  <title>🚘Huntington Used Auto Dealership</title>
+ 
 
 
   <!-- Custom styles for this template -->
@@ -41,9 +43,9 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4 text-center" style="background-color:white">
-      <h1 class="display-3">Huntington Auto Dealer</h1>
+      <h1 class="display-4">Huntington Used Auto Dealership</h1>
       <p class="lead">Find a car for an affordable price!</p>
-      <button class="btn btn-primary create-account">Create Account</button>
+      <button class="btn btn-primary create-account">Create Client</button>
     </header>
 
     <!-- Page Features -->
