Added more fake seed data

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
 
-  <title>🚘Huntington Used Auto Dealership</title>
+  <title>🚘Huntington Pre-Owned Dealership</title>
  
 
 
@@ -43,7 +43,7 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4 text-center" style="background-color:white">
-      <h1 class="display-4">Huntington Used Auto Dealership</h1>
+      <h1 class="display-4">Ejaz Pre-Owned Auto Dealership</h1>
       <p class="lead">Find a car for an affordable price!</p>
       <button class="btn btn-primary create-account">Create Client</button>
     </header>
