--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 
   <!-- Custom styles for this template -->
   <link href="index.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   <script defer src="index.js"></script>
 
 </head>
@@ -24,6 +25,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container navigation">
+        <img style="height:50px;" src="https://d2v1gjawtegg5z.cloudfront.net/uploads/files/000/027/034/original/HFL-Logo-042319-5Star-NoStoreName.png?1556137291">
       <h4 id="username"></h4>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -42,11 +44,14 @@
   <div class="container">
 
     <!-- Jumbotron Header -->
-    <header class="jumbotron my-4 text-center" style="background-color:white">
-      <h1 class="display-4">Ejaz Pre-Owned Auto Dealership</h1>
-      <p class="lead">Find a car for an affordable price!</p>
-      <button class="btn btn-primary create-account">Create Client</button>
-    </header>
+   
+      <header class="jumbotron my-4 text-center" style="background-color:white">
+        <br>
+        <h3 class="title display-4 animated fadeIn">EJAZ PREOWNED AUTO DEALERSHIP</h3>
+          <p class="title lead">Find a car for an affordable price!</p>
+          <button class="btn btn-danger create-account">Create Client</button>
+        </header>
+     
 
     <!-- Page Features -->
     <div class="container">
