--- a/src/index.html
+++ b/src/index.html
@@ -42,14 +42,14 @@
 
   <!-- Page Content -->
   <div class="container">
-
+    
     <!-- Jumbotron Header -->
-   
+  
       <header class="jumbotron my-4 text-center" style="background-color:white">
-        <br>
-        <h3 class="title display-4 animated fadeIn">EJAZ PREOWNED AUTO DEALERSHIP</h3>
-          <p class="title lead">Find a car for an affordable price!</p>
+        <h6 class="title display-4 animated bounceInDown">EJAZ PREOWNED AUTO DEALERSHIP</h6>
+          <p class="title lead animated fadeIn">Find a car for an affordable price!</p>
           <button class="btn btn-danger create-account">Create Client</button>
+        </div>
         </header>
      
 
