Changed Styling/color scheme, fixed dynamic look when deleting an apointment so the space doesnt show but moves all appointments up by getting the right parent

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container navigation">
         <img style="height:50px;" src="https://d2v1gjawtegg5z.cloudfront.net/uploads/files/000/027/034/original/HFL-Logo-042319-5Star-NoStoreName.png?1556137291">
       <h4 id="username"></h4>
@@ -45,8 +45,11 @@
     
     <!-- Jumbotron Header -->
   
-      <header class="jumbotron my-4 text-center" style="background-color:white">
-        <h6 class="title display-4 animated bounceInDown">EJAZ PREOWNED AUTO DEALERSHIP</h6>
+      <header class="jumbotron my-4 text-center container" style="background-color:white">
+          <br><br>
+
+          <img height="200" width="200" src="https://www.goggleauctions.com/uploads/spin-car-cBU.gif">
+        <h1 class="title display-4 animated bounceInDown">EJAZ PREOWNED AUTO DEALERSHIP</h1>
           <p class="title lead animated fadeIn">Find a car for an affordable price!</p>
           <button class="btn btn-danger create-account">Create Client</button>
         </div>
