Bounce down animation applied to full jumbotron instead of just the caption

--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,11 @@
     
     <!-- Jumbotron Header -->
   
-      <header class="jumbotron my-4 text-center container" style="background-color:white">
+      <header class="jumbotron my-4 text-center container animated bounceInDown" style="background-color:white">
           <br><br>
 
           <img height="200" width="200" src="https://www.goggleauctions.com/uploads/spin-car-cBU.gif">
-        <h1 class="title display-4 animated bounceInDown">EJAZ PREOWNED AUTO DEALERSHIP</h1>
+        <h1 class="title display-4">EJAZ PREOWNED AUTO DEALERSHIP</h1>
           <p class="title lead animated fadeIn">Find a car for an affordable price!</p>
           <button class="btn btn-danger create-account">Create Client</button>
         </div>
